--- a/webempresa/email_settings.json
+++ b/webempresa/email_settings.json
@@ -1,8 +1,7 @@
 {
-  "EMAIL_HOST": "smtp.gmail.com",  
+  "EMAIL_HOST": "sandbox.smtp.mailtrap.io",  
   "EMAIL_PORT": 587,  
   "EMAIL_USE_TLS": true,
-  "EMAIL_HOST_USER": "1cnachosanchez@gmail.com",  
-  "EMAIL_HOST_PASSWORD": "1234",
-  "DEFAULT_FROM_EMAIL": "1cnachosanchez@gmail.com"
+  "EMAIL_HOST_USER": "554fa51254fba6",  
+  "EMAIL_HOST_PASSWORD": "ddc3425f4c9f33"
 }
